--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 ### Linux ###
 *~
 
+# sam template with env variables and local build artifacts
+template.yaml
+
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
@@ -150,7 +153,8 @@ temp/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
