env variables added to samconfig + template.yaml for both dev and prod

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,34 +2,75 @@
 # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-cli-config.html
 version = 0.1
 
-[default]
-[default.global.parameters]
-stack_name = "sam-app"
+[prod]
+[prod.global.parameters]
+stack_name = "slack-call-analyzer-prod"
 
-[default.build.parameters]
+[prod.build.parameters]
 cached = true
 parallel = true
 
-[default.validate.parameters]
+[prod.validate.parameters]
 lint = true
 
-[default.deploy.parameters]
+[prod.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
-stack_name = "slack-autobot"
-s3_prefix = "slack-autobot"
+stack_name = "slack-call-analyzer-prod"
+s3_prefix = "slack-call-analyzer/prod"
 region = "us-east-2"
 image_repositories = []
+environment_type = "prod"
+download_url = "https://fpaztvc0r3.execute-api.us-east-2.amazonaws.com/Prod/download-url"
+list_recordings = "https://fpaztvc0r3.execute-api.us-east-2.amazonaws.com/Prod/list-recordings"
+transcript_handler = "https://fpaztvc0r3.execute-api.us-east-2.amazonaws.com/Prod/transcript-handler"
 
-[default.package.parameters]
+[prod.package.parameters]
 resolve_s3 = true
 
-[default.sync.parameters]
+[prod.sync.parameters]
 watch = true
 
-[default.local_start_api.parameters]
+[prod.local_start_api.parameters]
 warm_containers = "EAGER"
 
-[default.local_start_lambda.parameters]
+[prod.local_start_lambda.parameters]
 warm_containers = "EAGER"
+
+[dev]
+[dev.global.parameters]
+stack_name = "slack-call-analyzer-dev"
+
+[dev.build.parameters]
+cached = true
+parallel = true
+
+[dev.validate.parameters]
+lint = true
+
+[dev.deploy.parameters]
+capabilities = "CAPABILITY_IAM"
+confirm_changeset = true
+resolve_s3 = true
+stack_name = "slack-call-analyzer-dev"
+s3_prefix = "slack-call-analyzer/dev"
+region = "us-east-2"
+image_repositories = []
+environment_type = "dev"
+download_url = "https://wlxxj9i0dj.execute-api.us-east-2.amazonaws.com/Prod/download-url"
+list_recordings = "https://wlxxj9i0dj.execute-api.us-east-2.amazonaws.com/Prod/list-recordings"
+transcript_handler = "https://wlxxj9i0dj.execute-api.us-east-2.amazonaws.com/Prod/transcript-handler"
+
+[dev.package.parameters]
+resolve_s3 = true
+
+[dev.sync.parameters]
+watch = true
+
+[dev.local_start_api.parameters]
+warm_containers = "EAGER"
+
+[dev.local_start_lambda.parameters]
+warm_containers = "EAGER"
+
